--- a/index_responsible.html
+++ b/index_responsible.html
@@ -87,11 +87,34 @@
 					<input type="range" id="Label-Size-Slider" min="0" max="50" step="0.1" value="10">
 					<span id="value">10</span>
 			</div>
-			<div>
-				<li><a href="Inquiry.html">お問い合わせフォーム</a></li>
-			</div>
 		</div>
 
+		<div class="Form">
+			<div class="Form-Item">
+			  <p class="Form-Item-Label">
+				<span class="Form-Item-Label-Required">必須</span>会社名
+			  </p>
+			  <input type="text" class="Form-Item-Input" placeholder="例）株式会社令和">
+			</div>
+			<div class="Form-Item">
+			  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>氏名</p>
+			  <input type="text" class="Form-Item-Input" placeholder="例）山田太郎">
+			</div>
+			<div class="Form-Item">
+			  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
+			  <input type="text" class="Form-Item-Input" placeholder="例）000-0000-0000">
+			</div>
+			<div class="Form-Item">
+			  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>メールアドレス</p>
+			  <input type="email" class="Form-Item-Input" placeholder="例）example@gmail.com">
+			</div>
+			<div class="Form-Item">
+			  <p class="Form-Item-Label isMsg"><span class="Form-Item-Label-Required">必須</span>お問い合わせ内容</p>
+			  <textarea class="Form-Item-Textarea"></textarea>
+			</div>
+			<input type="submit" class="Form-Btn" value="送信する">
+		  </div>
+		
 	</main>
 
 	
@@ -170,7 +193,10 @@
 		<div class="overlay"></div>
 	</div>
 
+
 	<script src='JavaScript/LowVisionMap_responsible.js'></script>
+
+
 
 </body>
 
