--- a/index_responsible.html
+++ b/index_responsible.html
@@ -16,8 +16,6 @@
 	
 <body>
 
-
-
 	<main>
 
 		<div class="ShadowBox">
@@ -89,31 +87,12 @@
 			</div>
 		</div>
 
-		<div class="Form">
-			<div class="Form-Item">
-			  <p class="Form-Item-Label">
-				<span class="Form-Item-Label-Required">必須</span>会社名
-			  </p>
-			  <input type="text" class="Form-Item-Input" placeholder="例）株式会社令和">
-			</div>
-			<div class="Form-Item">
-			  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>氏名</p>
-			  <input type="text" class="Form-Item-Input" placeholder="例）山田太郎">
-			</div>
-			<div class="Form-Item">
-			  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
-			  <input type="text" class="Form-Item-Input" placeholder="例）000-0000-0000">
-			</div>
-			<div class="Form-Item">
-			  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>メールアドレス</p>
-			  <input type="email" class="Form-Item-Input" placeholder="例）example@gmail.com">
-			</div>
-			<div class="Form-Item">
-			  <p class="Form-Item-Label isMsg"><span class="Form-Item-Label-Required">必須</span>お問い合わせ内容</p>
-			  <textarea class="Form-Item-Textarea"></textarea>
-			</div>
-			<input type="submit" class="Form-Btn" value="送信する">
-		  </div>
+		<script src="https://sdk.form.run/js/v2/embed.js"></script>
+		<div
+		  class="formrun-embed"
+		  data-formrun-form="@gakuto--1620717077"
+		  data-formrun-redirect="true">
+		</div>
 		
 	</main>
 
@@ -196,6 +175,7 @@
 
 	<script src='JavaScript/LowVisionMap_responsible.js'></script>
 
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 
 </body>
