--- a/index_responsible.html
+++ b/index_responsible.html
@@ -81,9 +81,13 @@
 				</div>
 			</div>
 			<div class="EditPanel2">
-				<h3>文字の表示/非表示</h3>
-					<input type="range" id="Label-Size-Slider" min="0" max="50" step="0.1" value="10">
-					<span id="value">10</span>
+					<h3>文字の大きさ調整</h3>
+					<select id="layer" name="layer">
+						<option value="water">Water</option>
+						<option value="building">Buildings</option>
+					</select>
+				<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
+				<span id="current-value"></span>	
 			</div>
 		</div>
 
@@ -170,12 +174,9 @@
 			</ul>
 		</nav>
 		<div class="overlay"></div>
-	</div>
-
 
 	<script src='JavaScript/LowVisionMap_responsible.js'></script>
 
-	<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 
 </body>
