--- a/index.html
+++ b/index.html
@@ -25,59 +25,44 @@
 			<div class="EditPanel1">
 				<h3>文字の表示/非表示</h3>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="country-label" onchange="toggle1()"/>
+					<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="Country" onchange="toggle1()"/>
 					<label class="switch" for='setting-item-1'></label>
 					<label class="text" for='setting-item-1'>国名</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="state-label" onchange="toggle2()"/>
+					<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="State" onchange="toggle2()"/>
 					<label class="switch" for='setting-item-2'></label>
 					<label class="text" for='setting-item-2'>県名</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="settlement-major-label" onchange="toggle3()"/>
+					<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="TownsAndVillages" onchange="toggle3()"/>
 					<label class="switch" for='setting-item-3'></label>
-					<label class="text" for='setting-item-3'>市の名前</label>
+					<label class="text" for='setting-item-3'>市町村名</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="settlement-subdivision-label" onchange="toggle4()"/>
+					<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="Buildings" onchange="toggle4()"/>
 					<label class="switch" for='setting-item-4'></label>
-					<label class="text" for='setting-item-4'>町の名前</label>
+					<label class="text" for='setting-item-4'>建物、橋</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="settlement-minor-label" onchange="toggle5()"/>
+					<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="Mountains" onchange="toggle5()"/>
 					<label class="switch" for='setting-item-5'></label>
-					<label class="text" for='setting-item-5'>地方、地域の名前</label>
+					<label class="text" for='setting-item-5'>山</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="poi-label" onchange="toggle6()"/>
+					<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="Waters" onchange="toggle6()"/>
 					<label class="switch" for='setting-item-6'></label>
-					<label class="text" for='setting-item-6'>建物名</label>
+					<label class="text" for='setting-item-6'>川、海</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="airport-label" onchange="toggle7()"/>
+					<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="Highway" onchange="toggle7()"/>
 					<label class="switch" for='setting-item-7'></label>
-					<label class="text" for='setting-item-7'>空港、自衛隊基地</label>
+					<label class="text" for='setting-item-7'>国道、高速道路、バイパスなど</label>
 				</div>
 				<div class="item-frame">
-					<input type='checkbox' id='setting-item-8' class="checkbox" checked="checked" name="PlaceLabel" value="natural-point-label" onchange="toggle8()"/>
+					<input type='checkbox' id='setting-item-8' class="checkbox" checked="checked" name="PlaceLabel" value="MinorRoads" onchange="toggle8()"/>
 					<label class="switch" for='setting-item-8'></label>
-					<label class="text" for='setting-item-8'>島、山、温泉</label>
-				</div>
-				<div class="item-frame">
-					<input type='checkbox' id='setting-item-9' class="checkbox" checked="checked" name="PlaceLabel" value="water-point-label" onchange="toggle9()"/>
-					<label class="switch" for='setting-item-9'></label>
-					<label class="text" for='setting-item-9'>川、海</label>
-				</div>
-				<div class="item-frame">
-					<input type='checkbox' id='setting-item-10' class="checkbox" checked="checked" name="PlaceLabel" value="road-label-simple" onchange="toggle10()"/>
-					<label class="switch" for='setting-item-10'></label>
-					<label class="text" for='setting-item-10'>太い道路</label>
-				</div>
-				<div class="item-frame">
-					<input type='checkbox' id='setting-item-11' class="checkbox" checked="checked" name="PlaceLabel" value="path-pedestrian-label" onchange="toggle11()"/>
-					<label class="switch" for='setting-item-11'></label>
-					<label class="text" for='setting-item-11'>細い道路、歩道</label>
+					<label class="text" for='setting-item-8'>その他道路、歩道など</label>
 				</div>
 			</div>
 			<div class="EditPanel2">
@@ -116,61 +101,46 @@
 					<li>なつかしくってあったかい、きりぎりす。</li>
 					<li>なつかしくってあったかい、きりぎりす。</li>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="country-label" onchange="toggle1()"/>
+						<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="Country" onchange="toggle1()"/>
 						<label class="switch" for='setting-item-1'></label>
 						<label class="text" for='setting-item-1'>国名</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="state-label" onchange="toggle2()"/>
+						<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="State" onchange="toggle2()"/>
 						<label class="switch" for='setting-item-2'></label>
 						<label class="text" for='setting-item-2'>県名</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="settlement-major-label" onchange="toggle3()"/>
+						<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="TownsAndVillages" onchange="toggle3()"/>
 						<label class="switch" for='setting-item-3'></label>
-						<label class="text" for='setting-item-3'>市の名前</label>
+						<label class="text" for='setting-item-3'>市町村名</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="settlement-subdivision-label" onchange="toggle4()"/>
+						<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="Buildings" onchange="toggle4()"/>
 						<label class="switch" for='setting-item-4'></label>
-						<label class="text" for='setting-item-4'>町の名前</label>
+						<label class="text" for='setting-item-4'>建物、橋</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="settlement-minor-label" onchange="toggle5()"/>
+						<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="Mountains" onchange="toggle5()"/>
 						<label class="switch" for='setting-item-5'></label>
-						<label class="text" for='setting-item-5'>地方、地域の名前</label>
+						<label class="text" for='setting-item-5'>山</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="poi-label" onchange="toggle6()"/>
+						<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="Waters" onchange="toggle6()"/>
 						<label class="switch" for='setting-item-6'></label>
-						<label class="text" for='setting-item-6'>建物名</label>
+						<label class="text" for='setting-item-6'>川、海</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="airport-label" onchange="toggle7()"/>
+						<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="Highway" onchange="toggle7()"/>
 						<label class="switch" for='setting-item-7'></label>
-						<label class="text" for='setting-item-7'>空港、自衛隊基地</label>
+						<label class="text" for='setting-item-7'>国道、高速道路、バイパスなど</label>
 					</div>
 					<div class="item-frame">
-						<input type='checkbox' id='setting-item-8' class="checkbox" checked="checked" name="PlaceLabel" value="natural-point-label" onchange="toggle8()"/>
+						<input type='checkbox' id='setting-item-8' class="checkbox" checked="checked" name="PlaceLabel" value="MinorRoads" onchange="toggle8()"/>
 						<label class="switch" for='setting-item-8'></label>
-						<label class="text" for='setting-item-8'>島、山、温泉</label>
+						<label class="text" for='setting-item-8'>その他道路、歩道など</label>
 					</div>
-					<div class="item-frame">
-						<input type='checkbox' id='setting-item-9' class="checkbox" checked="checked" name="PlaceLabel" value="water-point-label" onchange="toggle9()"/>
-						<label class="switch" for='setting-item-9'></label>
-						<label class="text" for='setting-item-9'>川、海</label>
 					</div>
-					<div class="item-frame">
-						<input type='checkbox' id='setting-item-10' class="checkbox" checked="checked" name="PlaceLabel" value="road-label-simple" onchange="toggle10()"/>
-						<label class="switch" for='setting-item-10'></label>
-						<label class="text" for='setting-item-10'>太い道路</label>
-					</div>
-					<div class="item-frame">
-						<input type='checkbox' id='setting-item-11' class="checkbox" checked="checked" name="PlaceLabel" value="path-pedestrian-label" onchange="toggle11()"/>
-						<label class="switch" for='setting-item-11'></label>
-						<label class="text" for='setting-item-11'>細い道路、歩道</label>
-					</div>
-				</div>
 			</ul>
 		</nav>
 		<div class="overlay"></div>
