--- a/index_responsible.html
+++ b/index_responsible.html
@@ -52,7 +52,7 @@
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="Waters" onchange="toggle6()"/>
 					<label class="switch" for='setting-item-6'></label>
-					<label class="text" for='setting-item-6'>川、海</label>
+					<label class="text" for='setting-item-6'>川、湖、海</label>
 				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="Highway" onchange="toggle7()"/>
@@ -67,9 +67,16 @@
 			</div>
 			<div class="EditPanel2">
 					<h3>文字の大きさ調整</h3>
-					<select id="layer" name="layer">
-						<option value="water">Water</option>
-						<option value="building">Buildings</option>
+					<select id="ChoosedLayer" name="ChoosedLayer" onchange="ChoosingLayer()">
+						<option value="NotChoosed">-</option>
+						<option value="NowChoosedCountry">国名</option>
+						<option value="NowChoosedState">県名</option>
+						<option value="NowChoosedTownAndVillsge">市町村名</option>
+						<option value="NowChoosedBuilding">建物、橋</option>
+						<option value="NowChoosedMountains">山</option>
+						<option value="NowChoosedWaters">川、湖、海</option>
+						<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+						<option value="NowChosedMinorRoads">その他道路、歩道など</option>
 					</select>
 				<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
 				<span id="current-value"></span>	
