the number of slider increased

--- a/index_responsible.html
+++ b/index_responsible.html
@@ -29,40 +29,72 @@
 					<label class="switch" for='setting-item-1'></label>
 					<label class="text" for='setting-item-1'>国名</label>
 				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
+				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-2' class="checkbox" checked="checked" name="PlaceLabel" value="State" onchange="toggle2()"/>
 					<label class="switch" for='setting-item-2'></label>
 					<label class="text" for='setting-item-2'>県名</label>
+				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
 				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-3' class="checkbox" checked="checked" name="PlaceLabel" value="TownsAndVillages" onchange="toggle3()"/>
 					<label class="switch" for='setting-item-3'></label>
 					<label class="text" for='setting-item-3'>市町村名</label>
 				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
+				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-4' class="checkbox" checked="checked" name="PlaceLabel" value="Buildings" onchange="toggle4()"/>
 					<label class="switch" for='setting-item-4'></label>
 					<label class="text" for='setting-item-4'>建物、橋</label>
+				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
 				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-5' class="checkbox" checked="checked" name="PlaceLabel" value="Mountains" onchange="toggle5()"/>
 					<label class="switch" for='setting-item-5'></label>
 					<label class="text" for='setting-item-5'>山</label>
 				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
+				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-6' class="checkbox" checked="checked" name="PlaceLabel" value="Waters" onchange="toggle6()"/>
 					<label class="switch" for='setting-item-6'></label>
 					<label class="text" for='setting-item-6'>川、湖、海</label>
+				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
 				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-7' class="checkbox" checked="checked" name="PlaceLabel" value="Highway" onchange="toggle7()"/>
 					<label class="switch" for='setting-item-7'></label>
 					<label class="text" for='setting-item-7'>国道、高速道路、バイパスなど</label>
 				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
+				</div>
 				<div class="item-frame">
 					<input type='checkbox' id='setting-item-8' class="checkbox" checked="checked" name="PlaceLabel" value="MinorRoads" onchange="toggle8()"/>
 					<label class="switch" for='setting-item-8'></label>
 					<label class="text" for='setting-item-8'>その他道路、歩道など</label>
+				</div>
+				<div class="range">
+					<input type="range" min="0" max="10" value="5">
+					<span>5</span>
 				</div>
 			</div>
 			<div class="EditPanel2">
@@ -78,8 +110,19 @@
 						<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
 						<option value="NowChosedMinorRoads">その他道路、歩道など</option>
 					</select>
-				<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
-				<span id="current-value"></span>	
+					<div class="SizeEditSlider">
+						<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
+						<span id="current-value"></span>
+					</div>
+					<div class="range">
+						<input type="range" min="0" max="10" value="5">
+						<span>5</span>
+					</div>
+					<div class="range">
+						<input type="range" min="0" max="10" value="5">
+						<span>5</span>
+					</div>
+					</div>
 			</div>
 		</div>
 
@@ -101,12 +144,6 @@
 		<nav>
 			<ul>
 				<div class="EditPanel_SP">
-					<h3>文字の表示/非表示</h3>
-					<li>なつかしくってあったかい、きりぎりす。</li>
-					<li>なつかしくってあったかい、きりぎりす。</li>
-					<li>なつかしくってあったかい、きりぎりす。</li>
-					<li>なつかしくってあったかい、きりぎりす。</li>
-					<li>なつかしくってあったかい、きりぎりす。</li>
 					<div class="item-frame">
 						<input type='checkbox' id='setting-item-1' class="checkbox" checked="checked" name="PlaceLabel" value="Country" onchange="toggle1()"/>
 						<label class="switch" for='setting-item-1'></label>
