--- a/index_responsible.html
+++ b/index_responsible.html
@@ -85,11 +85,13 @@
 			</div>
 		</div>
 
-		<script src="https://sdk.form.run/js/v2/embed.js"></script>
-		<div
-		  class="formrun-embed"
-		  data-formrun-form="@gakuto--1620717077"
-		  data-formrun-redirect="true">
+		<div class="Confirm">
+			<script src="https://sdk.form.run/js/v2/embed.js"></script>
+			<div>
+			class="formrun-embed"
+			data-formrun-form="@gakuto--1620717077"
+			data-formrun-redirect="true">
+			</div>
 		</div>
 		
 	</main>
