language about navigation edit

--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 	<link href="css/style.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+	<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css" type="text/css">
 </head>
 	
 <body>
 
 	<main>
 
-		<div class="ShadowBox">
+		<div class="ShadowBox2">
+			<div id="Navigation" class="Navigation"></div>
+		</div>
+
+		<div class="ShadowBox1">
 			<div id="map"></div>
 		</div>
 		<div id="EditPanel_PC" class="clearfix">
@@ -84,6 +90,7 @@
 					</div>
 			</div>
 		</div>
+
 					
 	</main>
 
