--- a/index_responsible.html
+++ b/index_responsible.html
@@ -20,7 +20,11 @@
 
 	<main>
 
-		<div class="ShadowBox">
+		<div class="ShadowBox2">
+			<div id="Navigation" class="Navigation"></div>
+		</div>
+
+		<div class="ShadowBox1">
 			<div id="map"></div>
 		</div>
 		<div id="EditPanel_PC" class="clearfix">
@@ -86,6 +90,7 @@
 					</div>
 			</div>
 		</div>
+
 					
 	</main>
 
