--- a/index_responsible.html
+++ b/index_responsible.html
@@ -20,10 +20,6 @@
 
 	<main>
 
-		<div class="ShadowBox2">
-			<div id="Navigation" class="Navigation"></div>
-		</div>
-
 		<div class="ShadowBox1">
 			<div id="map"></div>
 		</div>
@@ -89,6 +85,10 @@
 						<span id="current-value"></span>
 					</div>
 			</div>
+			<div class="ShadowBox2">
+				<div id="Navigation" class="Navigation"></div>
+			</div>
+	
 		</div>
 
 					
@@ -157,7 +157,7 @@
 								<option value="NowChoosedMountains">山</option>
 								<option value="NowChoosedWaters">川、湖、海</option>
 								<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-								<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+								<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
 							</select>
 							<div class="SizeEditSlider">
 								<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
