navigation and map edit again

--- a/index_responsible.html
+++ b/index_responsible.html
@@ -85,10 +85,12 @@
 						<span id="current-value"></span>
 					</div>
 			</div>
-			<div class="ShadowBox2">
-				<div id="Navigation" class="Navigation"></div>
+			<div class="EditPanel3">
+				<h3>経路案内</h3>
+				<div class="ShadowBox2">
+					<div id="Navigation" class="Navigation"></div>
+				</div>
 			</div>
-	
 		</div>
 
 					
