--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/style_responsible.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -19,10 +19,6 @@
 <body>
 
 	<main>
-
-		<div class="ShadowBox2">
-			<div id="Navigation" class="Navigation"></div>
-		</div>
 
 		<div class="ShadowBox1">
 			<div id="map"></div>
@@ -88,6 +84,12 @@
 						<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
 						<span id="current-value"></span>
 					</div>
+			</div>
+			<div class="EditPanel3">
+				<h3>経路案内</h3>
+				<div class="ShadowBox2">
+					<div id="Navigation" class="Navigation"></div>
+				</div>
 			</div>
 		</div>
 
@@ -157,7 +159,7 @@
 								<option value="NowChoosedMountains">山</option>
 								<option value="NowChoosedWaters">川、湖、海</option>
 								<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-								<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+								<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
 							</select>
 							<div class="SizeEditSlider">
 								<input type="range" id="Label-Size-Slider" min="0" max="30" step="0.1">
@@ -169,7 +171,7 @@
 		</nav>
 		<div class="overlay"></div>
 
-	<script src='JavaScript/LowVisionMap.js'></script>
+	<script src='JavaScript/LowVisionMap_responsible.js'></script>
 
 
 
