fixed to background

--- a/index_responsible.html
+++ b/index_responsible.html
@@ -91,6 +91,22 @@
 					<div id="Navigation_PC" class="Navigation"></div>
 				</div>
 			</div>
+			<div class="EditPanel4">
+				<h3>色の変更</h3>
+				<select id="ColoredLayer_PC" name="ColoredLayer_PC" onchange="ColoredLayer_PC_PC()">
+					<option value="NotChoosed">-</option>
+					<option value="NowChoosedCountry">国名</option>
+					<option value="NowChoosedState">県名</option>
+					<option value="NowChoosedTownAndVillage">市町村名</option>
+					<option value="NowChoosedBuilding">建物、橋</option>
+					<option value="NowChoosedMountains">山</option>
+					<option value="NowChoosedWaters">川、湖、海</option>
+					<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+					<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+				</select>
+				<div id="swatches"></div>
+			</div>
+
 		</div>
 
 					
