--- a/index_background.html
+++ b/index_background.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style_responsible.css" rel="stylesheet" />
+	<link href="css/style_background.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -91,6 +91,22 @@
 					<div id="Navigation_PC" class="Navigation"></div>
 				</div>
 			</div>
+			<div class="EditPanel4">
+				<h3>色の変更</h3>
+				<select id="ColoredLayer_PC" name="ColoredLayer_PC" onchange="ColoredLayer_PC_PC()">
+					<option value="NotChoosed">-</option>
+					<option value="NowChoosedCountry">国名</option>
+					<option value="NowChoosedState">県名</option>
+					<option value="NowChoosedTownAndVillage">市町村名</option>
+					<option value="NowChoosedBuilding">建物、橋</option>
+					<option value="NowChoosedMountains">山</option>
+					<option value="NowChoosedWaters">川、湖、海</option>
+					<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+					<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+				</select>
+				<div id="swatches"></div>
+			</div>
+
 		</div>
 
 					
@@ -171,7 +187,7 @@
 		</nav>
 		<div class="overlay"></div>
 
-	<script src='JavaScript/LowVisionMap_responsible.js'></script>
+	<script src='JavaScript/LowVisionMap_background.js'></script>
 
 
 
